public/styles.css
/* ... */
.loader {
  border: 10px solid transparent;
  border-top: 10px solid whitesmoke;
  border-right: 10px solid whitesmoke;
  border-bottom: 10px solid whitesmoke;
  border-radius: 50%;
  width: 60px;
  height: 60px;
  animation: spin 2s linear infinite;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.loader-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding: 50px;
  width: 100%;
  height: 100vh;
}

.loader-container > p {
  font-size: larger;
}

